2020-11-13  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-insn.def: Remove definition of PKL_INSN_XMKA.
	* libpoke/pvm.jitter (mka): Remove.
	(xmka): Rename to mka.
	* libpoke/pkl-asm.pks (aconc): Rename xmka to mka.
	(atrim): Likewise.
	* libpoke/pkl-gen.c (pkl_gen_pr_funcall): Likewise.
	(pkl_gen_pr_array): Likewise.
	* libpoke/pkl-gen.pks (array_mapper): Likewise.
	(array_constructor): Likewise.
	* libpoke/pvm.h: Remove prototype for xpvm_make_array.
	* libpoke/pvm-val.c (pvm_make_array): Remove.
	(xpvm_make_array): Rename to pvm_make_array.

2020-11-13  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-ast.h (PKL_AST_ASS_STMT_VALMAPPER_BACK): Remove.
	(PKL_AST_ASS_STMT_VALMAPPER_OVER): Likewise.
	(PKL_AST_ASS_STMT_VALMAPPER_P): Likewise.
	(struct pkl_ast_ass_stmt): Remove fields `valmapper_back' and
	`valmapper_over'.
	* libpoke/pkl-gen.h (struct pkl_gen_payload): Remove field
	`in_valmapper'.
	* libpoke/pkl-gen.c (pkl_gen_pr_ass_stml): Remove valmappers.
	(pkl_gen_ps_type_offset): Likewise.
	(pkl_gen_ps_type_integral): Likewise.
	(pkl_gen_pr_type_array): Likewise.
	(pkl_gen_ps_type_string): Likewise.
	* libpoke/pkl-gen.pks (array_valmapper): Remove.
	* testsuite/poke.map/valmap-arrays.pk: Remove test.
	* testsuite/Makefile.am (EXTRA_DIST): Update.

2020-11-13  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.c (pkl_gen_pr_funcall): Use new array schema.

2020-11-13  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-asm.pks (acat): New macro.
	(aelems): Remove macro.
	(aconc): Use the new array schema.

2020-11-13  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (array_constructor): Use new array schema.

2020-11-13  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm-val.c (pvm_array_insert): Fix setting of elem
	offsets.
	* libpoke/pkl-gen.pks (array_mapper): Use new array schema.

2020-11-13  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm-val.c (pvm_array_insert): Fix reallocation of
	buffer.